Fixed styles on small screens.

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,12 @@ html, body, #app {
   margin: 0 4rem;
 }
 
+@media screen and (max-width: 1000px) {
+  .app-container {
+    margin: 0;
+  }
+}
+
 .container {
   display: block;
   padding: 2rem;
